--- a/src/Weather.css
+++ b/src/Weather.css
@@ -38,11 +38,12 @@
   font-weight: lighter;
   line-height: 24px;
   font-size: 50px;
-  padding: 10px;
+  margin-left: 10px;
 }
 
 .Weather .unit {
   font-size: 12px;
   position: relative;
+  line-height: 1;
   top: -25px;
 }
