fixing some css issues

--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,6 +1,6 @@
 .WeatherForecast {
   text-align: center;
-  color: rgb(217, 24, 172);
+  color: #690569;
 }
 .WeatherForecast-temperature-min {
   opacity: 0.6;
