--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
+body {
+  background-image: url("backround.image.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .App {
   max-width: 650px;
   margin: 0 auto;
 }
 
 .App footer {
-  font-size: 11px;
-  margin: 5px;
+  font-size: 12px;
+  margin: 2px;
   margin-left: 45px;
+  color: rgb(16, 232, 207);
 }
