--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,10 +1,15 @@
 .Weather {
   border: 1px solid darkgray;
-  margin: 45px;
+  margin: 45px 25px;
   padding: 16px 16px;
   border-radius: 5px;
   max-width: 650px;
-  background-color: rgb(219, 201, 191);
+  background: linear-gradient(
+    104.3deg,
+    rgb(253, 243, 243) 10.9%,
+    rgb(248, 231, 231) 27.8%,
+    rgb(160, 112, 161) 101.7%
+  );
 }
 
 .Weather form {
