--- a/src/Weather.css
+++ b/src/Weather.css
@@ -34,22 +34,23 @@
 .Weather li {
   color: #690569;
   font-size: 14px;
-  line-height: 19px;
+  line-height: 22px;
   list-style: none;
-  margin-left: 5px;
+  margin-right: 50px;
 }
 
 .Weather .temperature {
-  font-weight: lighter;
+  font-weight: bolder;
   line-height: 24px;
-  font-size: 40px;
+  font-size: 42px;
   margin-left: 10px;
   position: relative;
+  color: darkblue;
 }
 
 .Weather .unit {
   font-size: 12px;
   position: relative;
   line-height: 1;
-  top: -20px;
+  top: -18px;
 }
