--- a/src/Weather.css
+++ b/src/Weather.css
@@ -40,7 +40,7 @@
 }
 
 .Weather .temperature {
-  font-weight: bolder;
+  font-weight: 300px;
   line-height: 24px;
   font-size: 42px;
   margin-left: 10px;
